= ActiveMerchant CHANGELOG

== HEAD

== Version 1.107.1 (Apr 1, 2020)
* Add `allowed_push_host` to gemspec [mdeloupy]

== Version 1.107.0 (Apr 1, 2020)
* Stripe Payment Intents: Early return failed `payment_methods` response [chinhle23] #3570
* Borgun: Support `passengerItineraryData` [therufs] #3572
* Ingenico GlobalCollect: support optional `requires_approval` field [fatcatt316] #3571
* CenPOS: Update failing remote tests [britth] #3575
* Realex: Update remote tests [britth] #3576
* FirstData e4 v27: Properly tag stored credential initiation field in request [britth] #3578
* Orbital: Fix stored credentials [chinhle23] #3579
* Acapture(Opp): Update gateway credentials [molbrown] #3574
* Ingenico GlobalCollect: support `requires_approval` field [fatcatt316] #3577
* CyberSource: Fix `void` for `purchase` transactions [chinhle23] #3581
* Checkout V2: Begin to add support for using network tokens for transactions. [arbianchi] #3580
* Opp: Update remote test fixtures [ccarruitero] #3582
* Optimal Payment: Add support for store [britth] #3585
* SecurePay Australia : Update test URL (#3586)

== Version 1.106.0 (Mar 10, 2020)
* PayJunctionV2: Send billing address in `auth` and `purchase` transactions [naashton] #3538
* Adyen: Fix some remote tests [curiousepic] #3541
* Redsys: Properly escape cardholder name and description fields in 3DS requests [britth] #3537
* RuboCop: Fix Style/HashSyntax [leila-alderman] #3540
* Paypal: Fix OrderTotal elements in `add_payment_details` [chinhle23] #3544
* Stripe Payment Intents: Add tests for "Idempotency-Key" header [fatcatt316] #3542
* Paypal: Fix RuboCop Style/HashSyntax violations [chinhle23] #3547
* Rubocop corrections for space around operators [cdmackeyfree] #3543
* Fat Zebra: Add `is_billing` in post for `store` call [chinhle23] #3551
* SafeCharge: Adds four supported countries [carrigan] #3550
* Ixopay: Support stored credentials [leila-alderman] #3549
* BlueSnap: Adds localized currency support [carrigan] #3552